Added command for more spm algorithms from spmf and removed some experimental algorithms I was no longer supporting